代码优化 升级JDK17